@@ -1,3 +1,13 @@
+2017-12-17 Werner S Freund
+	* Added specific configuration classes that allow setting 
+	limited or cast to type configuration instances.
+	* Bug fix in Logger module that would display non-breaking lines
+	messages when inside of unicode stream environment.
+	* Added rucio extract_scope method
+	* Added MultiThread automatic retrieval instance
+	* Improved Argparser help parsing and added default values.
+  * Tagging RingerCore-01-00-17
+
 2017-12-15 Werner S Freund
 	* Added option to inspect_list_attrs to not complain if input dimension it
 	does not match required dimension size when it is required to be of single
